# blue-bench

./: .dockerignore  .env.example  .gitignore  LICENSE  README.md  config.phase3.yaml  config.yaml  pyproject.toml  tool_categories.yaml
blue_bench_cli/: __init__.py  _sessions.py  _tool_categories.py  analyst.py  main.py
blue_bench_client/: __init__.py  _ollama.py  cloud_models.py  entities.py  grounding.py  interactive.py  mcp_client.py  runner.py  trace.py
blue_bench_eval/: __init__.py  aggregate.py  qualify.py
blue_bench_frontend/: README.md  _tool_categories_data.js  app.js  app_utils.js  index.html  json_rpc.js  loop.js  mcp_client.js  package.json  profiles.json  prompts.json  style.css  tool_adapter.js  tool_categories.js
blue_bench_generators/: __init__.py  _isotime.py
blue_bench_mcp/: __init__.py  anthropic_proxy.py  config.py  guardrails.py  prompts_compose.py  server.py  task_classes.py  transport_sse.py
docker/: Dockerfile.mcp  Dockerfile.openedr  Dockerfile.proxy  Dockerfile.seed  Dockerfile.target  compose.all.yml  compose.frontend.yml  compose.llm.yml  compose.tools.yml  mock_backends.py  openedr_run.py  seed_elasticsearch.py  target_entrypoint.sh
docs/: ARCHITECTURE.md  DEPLOYMENT.md  EVAL.md
sandbox/: README.md  runbook.md
scripts/: anthropic_proxy.sh  demo_preflight.sh  emit_profiles_manifest.py  emit_prompts_manifest.py  emit_tool_categories.py  ingest_ef.py  mcp_server.sh  mcp_server_sse.sh  ollama_cors_enable.sh  seed_es.py  smoke_vertical_slice.py
tests/: test_aggregate.py  test_anthropic_proxy.py  test_anthropic_runner.py  (+63 more)
(+188 files in other folders)
